--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,13 +18,16 @@
     </clr-header>
     <div class="content-container">
         <main class="content-area">
+            <div class="docs-wrapper">
+                <router-outlet></router-outlet>
+            </div>            
         </main>
         <clr-vertical-nav [clrVerticalNavCollapsible]="false" [clr-nav-level]="2">
             <clr-vertical-nav-group routerLinkActive="active" >
                 <clr-icon shape="block" clrVerticalNavIcon></clr-icon>
                 Components
                 <clr-vertical-nav-group-children *clrIfExpanded="true">
-                    <a clrVerticalNavLink routerLink="./normal/pidgey" routerLinkActive="active">
+                    <a clrVerticalNavLink routerLink="accordion" routerLinkActive="active">
                         Accordion
                     </a>
                     <a clrVerticalNavLink routerLink="./normal/snorlax" routerLinkActive="active">
