--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+h1 {
+    margin-top: -.3rem;
+}
+
+h3 {
+    margin-top: 2.4rem;
+}
+
+.docs-wrapper {
+    padding-left: 1.8rem;
+    padding-top: .3rem;
+    padding-bottom: 4.8rem;
+    max-width: 45rem;
+    width: 100%;
+}
+
+clr-accordion {
+    &.clr-accordion-reverse-title button.clr-accordion-header-button {
+    flex-direction: row-reverse !important;
+    align-items: center;
+    }
+
+    clr-accordion-title {
+        width: 100%;
+    }
+}
