feat(accordion): WIP

--- a/src/app/accordion/accordion.component.html
+++ b/src/app/accordion/accordion.component.html
@@ -1,40 +1,5 @@
-<h1>Accordion</h1>
-<h3>Default appearance</h3>
-<br>
-<clr-accordion [clrAccordionMultiPanel]=true>
-    <clr-accordion-panel>
-        <clr-accordion-title>Item 1</clr-accordion-title>
-        <clr-accordion-content *clrIfExpanded>Content 1</clr-accordion-content>
-    </clr-accordion-panel>
+<app-accordion-default></app-accordion-default>
 
-    <clr-accordion-panel>
-        <clr-accordion-title>Item 2</clr-accordion-title>
-        <clr-accordion-content *clrIfExpanded>Content 2</clr-accordion-content>
-    </clr-accordion-panel>
-
-    <clr-accordion-panel>
-        <clr-accordion-title>Item 3</clr-accordion-title>
-        <clr-accordion-content *clrIfExpanded>Content 3</clr-accordion-content>
-    </clr-accordion-panel>
-</clr-accordion>
-
-<pre _ngcontent-clarity-c212=""
-    class="language-html ng-star-inserted"><code _ngcontent-clarity-c212="" class="  language-html"><span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>clr-accordion</span><span class="token punctuation">&gt;</span></span>
-  <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>clr-accordion-panel</span><span class="token punctuation">&gt;</span></span>
-    <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>clr-accordion-title</span><span class="token punctuation">&gt;</span></span>Item 1<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>clr-accordion-title</span><span class="token punctuation">&gt;</span></span>
-    <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>clr-accordion-content</span> <span class="token attr-name">*clrIfExpanded</span><span class="token punctuation">&gt;</span></span>Content 1<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>clr-accordion-content</span><span class="token punctuation">&gt;</span></span>
-  <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>clr-accordion-panel</span><span class="token punctuation">&gt;</span></span>
-
-  <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>clr-accordion-panel</span><span class="token punctuation">&gt;</span></span>
-    <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>clr-accordion-title</span><span class="token punctuation">&gt;</span></span>Item 2<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>clr-accordion-title</span><span class="token punctuation">&gt;</span></span>
-    <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>clr-accordion-content</span> <span class="token attr-name">*clrIfExpanded</span><span class="token punctuation">&gt;</span></span>Content 2<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>clr-accordion-content</span><span class="token punctuation">&gt;</span></span>
-  <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>clr-accordion-panel</span><span class="token punctuation">&gt;</span></span>
-
-  <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>clr-accordion-panel</span><span class="token punctuation">&gt;</span></span>
-    <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>clr-accordion-title</span><span class="token punctuation">&gt;</span></span>Item 3<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>clr-accordion-title</span><span class="token punctuation">&gt;</span></span>
-    <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>clr-accordion-content</span> <span class="token attr-name">*clrIfExpanded</span><span class="token punctuation">&gt;</span></span>Content 3<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>clr-accordion-content</span><span class="token punctuation">&gt;</span></span>
-  <span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>clr-accordion-panel</span><span class="token punctuation">&gt;</span></span>
-<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>clr-accordion</span><span class="token punctuation">&gt;</span></span></code></pre>
 <h3>Icons in title</h3>
 <br>
 <clr-accordion>
