--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,8 +30,8 @@
                     <a clrVerticalNavLink routerLink="accordion" routerLinkActive="active">
                         Accordion
                     </a>
-                    <a clrVerticalNavLink routerLink="./normal/snorlax" routerLinkActive="active">
-                        Snorlax
+                    <a clrVerticalNavLink routerLink="buttons" routerLinkActive="active">
+                        Buttons
                     </a>
                 </clr-vertical-nav-group-children>
             </clr-vertical-nav-group>
