--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,29 @@ clr-accordion {
 form.no-top-margin .clr-form-control{
     margin-top: 0;
 }
+
+.btn.btn-link {
+    &.btn-success {
+        color: var(--clr-btn-success-outline-color);
+
+        &:disabled {
+            color: var(--clr-btn-success-outline-disabled-color);
+        }
+    }
+
+    &.btn-warning, &.btn-danger {
+        color: var(--clr-btn-danger-outline-color);
+
+        &:disabled {
+            color: var(--clr-btn-danger-outline-disabled-color);
+        }
+    }
+
+    &.btn-sm.btn-icon {
+        clr-icon {
+            height: var(--clr-btn-appearance-standard-icon-size, 0.6rem);
+            margin-top: 1px;
+            width: var(--clr-btn-appearance-standard-icon-size, 0.6rem);
+        }
+    }
+}
