--- a/src/app/buttons/buttons.component.html
+++ b/src/app/buttons/buttons.component.html
@@ -1,6 +1,6 @@
 <h1>Buttons</h1>
-<form clrForm clrLayout="vertical" [formGroup]="buttonOptionsForm" class="clr-row">
-    <clr-radio-container class="clr-col">
+<form clrForm clrLayout="horizontal" [formGroup]="buttonOptionsForm">
+    <clr-radio-container clrInline>
         <label>Component</label>
         <clr-radio-wrapper>
             <input type="radio" clrRadio name="controlType" required value="Button" formControlName="controlType" />
@@ -17,8 +17,8 @@
         </clr-radio-wrapper>
     </clr-radio-container>
 
-    <clr-radio-container class="clr-col">
-        <label>Button type</label>
+    <clr-radio-container clrInline>
+        <label>Appearance</label>
         <clr-radio-wrapper>
             <input type="radio" clrRadio name="buttonType" required value="Solid" formControlName="buttonType" />
             <label>Solid</label>
@@ -32,25 +32,29 @@
             <label>Flat</label>
         </clr-radio-wrapper>
     </clr-radio-container>
-    <clr-toggle-container class="clr-col">
+    <clr-toggle-container clrInline>
+        <label>Icon</label>
+        <clr-toggle-wrapper>
+            <input type="checkbox" clrToggle name="isLeftIconEnabled" formControlName="isLeftIconEnabled" />
+            <label>Left icon</label>
+        </clr-toggle-wrapper>
+        <clr-toggle-wrapper>
+            <input type="checkbox" clrToggle name="isRightIconEnabled" formControlName="isRightIconEnabled" />
+            <label>Right icon</label>
+        </clr-toggle-wrapper>
+    </clr-toggle-container>
+    <clr-toggle-container clrInline>
+        <label>Text</label>
+        <clr-toggle-wrapper>
+            <input type="checkbox" clrToggle name="isTextEnabled" formControlName="isTextEnabled" />
+            <label>Show text</label>
+        </clr-toggle-wrapper>
+    </clr-toggle-container>
+    <clr-toggle-container clrInline>
+        <label>Size</label>
         <clr-toggle-wrapper>
             <input type="checkbox" clrToggle name="isSmall" formControlName="isSmall" />
             <label>Small</label>
-        </clr-toggle-wrapper>
-
-        <clr-toggle-wrapper>
-            <input type="checkbox" clrToggle name="isLeftIconEnabled" formControlName="isLeftIconEnabled" />
-            <label>With icon on the left</label>
-        </clr-toggle-wrapper>
-
-        <clr-toggle-wrapper>
-            <input type="checkbox" clrToggle name="isTextEnabled" formControlName="isTextEnabled" />
-            <label>With text</label>
-        </clr-toggle-wrapper>
-
-        <clr-toggle-wrapper>
-            <input type="checkbox" clrToggle name="isRightIconEnabled" formControlName="isRightIconEnabled" />
-            <label>With icon on the right</label>
         </clr-toggle-wrapper>
     </clr-toggle-container>
 </form>
@@ -88,399 +92,8 @@
     {{buttonOptionsForm.value.isTextEnabled ? 'disabled' : null}}
     <clr-icon shape="arrow" dir="right" *ngIf="buttonOptionsForm.value.isRightIconEnabled"></clr-icon>
 </button>
-
-<h3>Solid</h3>
-<br />
-<h5>Normal size</h5>
-<h6>Regular</h6>
-<button class="btn btn-primary">Primary</button>
-<button class="btn btn-success">Success</button>
-<button class="btn btn-warning">Warning</button>
-<button class="btn btn-danger">Danger</button>
-<button class="btn btn-danger" disabled>Disabled</button>
-<h6>Icon + text</h6>
-<button class="btn btn-primary btn-icon">
-    <clr-icon shape="cog"></clr-icon>
-    Primary
-</button>
-<button class="btn btn-success btn-icon">
-    <clr-icon shape="check"></clr-icon>
-    Success
-</button>
-<button class="btn btn-warning btn-icon">
-    <clr-icon shape="warning-standard"></clr-icon>
-    Warning
-</button>
-<button class="btn btn-danger btn-icon">
-    <clr-icon shape="error-standard"></clr-icon>
-    Danger
-</button>
-<button class="btn btn-danger btn-icon" disabled>
-    <clr-icon shape="home"></clr-icon>
-    Disabled
-</button>
-
-<h6>Text + icon (use only with arrows or angle)</h6>
-<button class="btn btn-primary btn-icon">
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-primary btn-icon" disabled>
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-primary btn-icon">
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-<button class="btn btn-primary btn-icon" disabled>
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-
-<h6>Icon only</h6>
-<button class="btn btn-primary btn-icon">
-    <clr-icon shape="cog"></clr-icon>
-</button>
-<button class="btn btn-success btn-icon">
-    <clr-icon shape="check"></clr-icon>
-</button>
-<button class="btn btn-warning btn-icon">
-    <clr-icon shape="warning-standard"></clr-icon>
-</button>
-<button class="btn btn-danger btn-icon">
-    <clr-icon shape="error-standard"></clr-icon>
-</button>
-<button class="btn btn-danger btn-icon" disabled>
-    <clr-icon shape="home"></clr-icon>
-</button>
-
 <br />
 <br />
-<h5>Small</h5>
-<h6>Regular</h6>
-<button class="btn btn-primary btn-sm">Primary</button>
-<button class="btn btn-success btn-sm">Success</button>
-<button class="btn btn-warning btn-sm">Warning</button>
-<button class="btn btn-danger btn-sm">Danger</button>
-<button class="btn btn-danger btn-sm" disabled>Disabled</button>
-<h6>Icon + text</h6>
-<button class="btn btn-primary btn-icon btn-sm">
-    <clr-icon shape="cog"></clr-icon>
-    Primary
-</button>
-<button class="btn btn-success btn-icon btn-sm">
-    <clr-icon shape="check"></clr-icon>
-    Success
-</button>
-<button class="btn btn-warning btn-icon btn-sm">
-    <clr-icon shape="warning-standard"></clr-icon>
-    Warning
-</button>
-<button class="btn btn-danger btn-icon btn-sm">
-    <clr-icon shape="error-standard"></clr-icon>
-    Danger
-</button>
-<button class="btn btn-danger btn-icon btn-sm" disabled>
-    <clr-icon shape="home"></clr-icon>
-    Disabled
-</button>
+<button class="btn btn-primary btn-link btn-short" [routerLink]="showDetails ? './' : 'button'" (click)="showDetails = !showDetails"><ng-container *ngIf="!showDetails">Show all at once</ng-container><ng-container *ngIf="showDetails">Hide</ng-container></button>
 
-<h6>Text + icon (use only with arrows or angle)</h6>
-<button class="btn btn-primary btn-icon btn-sm">
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-primary btn-icon btn-sm" disabled>
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-primary btn-icon btn-sm">
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-<button class="btn btn-primary btn-icon btn-sm" disabled>
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-
-<h6>Icon only</h6>
-<button class="btn btn-primary btn-icon btn-sm">
-    <clr-icon shape="cog"></clr-icon>
-</button>
-<button class="btn btn-success btn-icon btn-sm">
-    <clr-icon shape="check"></clr-icon>
-</button>
-<button class="btn btn-warning btn-icon btn-sm">
-    <clr-icon shape="warning-standard"></clr-icon>
-</button>
-<button class="btn btn-danger btn-icon btn-sm">
-    <clr-icon shape="error-standard"></clr-icon>
-</button>
-<button class="btn btn-danger btn-icon btn-sm" disabled>
-    <clr-icon shape="home"></clr-icon>
-</button>
-
-<h3>Outline</h3>
-<br />
-<h5>Normal size</h5>
-<h6>Regular</h6>
-<button class="btn btn-outline">Primary</button>
-<button class="btn btn-success-outline">Success</button>
-<button class="btn btn-warning-outline">Warning</button>
-<button class="btn btn-danger-outline">Danger</button>
-<button class="btn btn-danger-outline" disabled>Disabled</button>
-<h6>Icon + text</h6>
-<button class="btn btn-outline btn-icon">
-    <clr-icon shape="cog"></clr-icon>
-    Primary
-</button>
-<button class="btn btn-success-outline btn-icon">
-    <clr-icon shape="check"></clr-icon>
-    Success
-</button>
-<button class="btn btn-warning-outline btn-icon">
-    <clr-icon shape="warning-standard"></clr-icon>
-    Warning
-</button>
-<button class="btn btn-danger-outline btn-icon">
-    <clr-icon shape="error-standard"></clr-icon>
-    Danger
-</button>
-<button class="btn btn-danger-outline btn-icon" disabled>
-    <clr-icon shape="home"></clr-icon>
-    Disabled
-</button>
-
-<h6>Text + icon (use only with arrows or angle)</h6>
-<button class="btn btn-outline btn-icon">
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-outline btn-icon" disabled>
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-outline btn-icon">
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-<button class="btn btn-outline btn-icon" disabled>
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-
-<h6>Icon only</h6>
-<button class="btn btn-outline btn-icon">
-    <clr-icon shape="cog"></clr-icon>
-</button>
-<button class="btn btn-success-outline btn-icon">
-    <clr-icon shape="check"></clr-icon>
-</button>
-<button class="btn btn-warning-outline btn-icon">
-    <clr-icon shape="warning-standard"></clr-icon>
-</button>
-<button class="btn btn-danger-outline btn-icon">
-    <clr-icon shape="error-standard"></clr-icon>
-</button>
-<button class="btn btn-danger-outline btn-icon" disabled>
-    <clr-icon shape="home"></clr-icon>
-</button>
-
-<br />
-<br />
-<h5>Small</h5>
-<h6>Regular</h6>
-<button class="btn btn-outline btn-sm">Primary</button>
-<button class="btn btn-success-outline btn-sm">Success</button>
-<button class="btn btn-warning-outline btn-sm">Warning</button>
-<button class="btn btn-danger-outline btn-sm">Danger</button>
-<button class="btn btn-danger-outline btn-sm" disabled>Disabled</button>
-<h6>Icon + text</h6>
-<button class="btn btn-outline btn-icon btn-sm">
-    <clr-icon shape="cog"></clr-icon>
-    Primary
-</button>
-<button class="btn btn-success-outline btn-icon btn-sm">
-    <clr-icon shape="check"></clr-icon>
-    Success
-</button>
-<button class="btn btn-warning-outline btn-icon btn-sm">
-    <clr-icon shape="warning-standard"></clr-icon>
-    Warning
-</button>
-<button class="btn btn-danger-outline btn-icon btn-sm">
-    <clr-icon shape="error-standard"></clr-icon>
-    Danger
-</button>
-<button class="btn btn-danger-outline btn-icon btn-sm" disabled>
-    <clr-icon shape="home"></clr-icon>
-    Disabled
-</button>
-
-<h6>Text + icon (use only with arrows or angle)</h6>
-<button class="btn btn-outline btn-icon btn-sm">
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-outline btn-icon btn-sm" disabled>
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-outline btn-icon btn-sm">
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-<button class="btn btn-outline btn-icon btn-sm" disabled>
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-
-<h6>Icon only</h6>
-<button class="btn btn-outline btn-icon btn-sm">
-    <clr-icon shape="cog"></clr-icon>
-</button>
-<button class="btn btn-success-outline btn-icon btn-sm">
-    <clr-icon shape="check"></clr-icon>
-</button>
-<button class="btn btn-warning-outline btn-icon btn-sm">
-    <clr-icon shape="warning-standard"></clr-icon>
-</button>
-<button class="btn btn-danger-outline btn-icon btn-sm">
-    <clr-icon shape="error-standard"></clr-icon>
-</button>
-<button class="btn btn-danger-outline btn-icon btn-sm" disabled>
-    <clr-icon shape="home"></clr-icon>
-</button>
-
-<h3>Flat</h3>
-<br />
-<h5>Normal size</h5>
-<h6>Regular</h6>
-<button class="btn btn-link btn-primary">Primary</button>
-<button class="btn btn-link btn-success">Success</button>
-<button class="btn btn-link btn-warning">Warning</button>
-<button class="btn btn-link btn-danger">Danger</button>
-<button class="btn btn-link btn-danger" disabled>Disabled</button>
-<h6>Icon + text</h6>
-<button class="btn btn-link btn-primary btn-icon">
-    <clr-icon shape="cog"></clr-icon>
-    Primary
-</button>
-<button class="btn btn-link btn-success btn-icon">
-    <clr-icon shape="check"></clr-icon>
-    Success
-</button>
-<button class="btn btn-link btn-warning btn-icon">
-    <clr-icon shape="warning-standard"></clr-icon>
-    Warning
-</button>
-<button class="btn btn-link btn-danger btn-icon">
-    <clr-icon shape="error-standard"></clr-icon>
-    Danger
-</button>
-<button class="btn btn-link btn-danger btn-icon" disabled>
-    <clr-icon shape="home"></clr-icon>
-    Disabled
-</button>
-
-<h6>Text + icon (use only with arrows or angle)</h6>
-<button class="btn btn-link btn-primary btn-icon">
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-link btn-primary btn-icon" disabled>
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-link btn-primary btn-icon">
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-<button class="btn btn-link btn-primary btn-icon" disabled>
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-
-<h6>Icon only</h6>
-<button class="btn btn-link btn-primary btn-icon">
-    <clr-icon shape="cog"></clr-icon>
-</button>
-<button class="btn btn-link btn-success btn-icon">
-    <clr-icon shape="check"></clr-icon>
-</button>
-<button class="btn btn-link btn-warning btn-icon">
-    <clr-icon shape="warning-standard"></clr-icon>
-</button>
-<button class="btn btn-link btn-danger btn-icon">
-    <clr-icon shape="error-standard"></clr-icon>
-</button>
-<button class="btn btn-link btn-danger btn-icon" disabled>
-    <clr-icon shape="home"></clr-icon>
-</button>
-
-<br />
-<br />
-<h5>Small</h5>
-<h6>Regular</h6>
-<button class="btn btn-link btn-primary btn-sm">Primary</button>
-<button class="btn btn-link btn-success btn-sm">Success</button>
-<button class="btn btn-link btn-warning btn-sm">Warning</button>
-<button class="btn btn-link btn-danger btn-sm">Danger</button>
-<button class="btn btn-link btn-danger btn-sm" disabled>Disabled</button>
-<h6>Icon + text</h6>
-<button class="btn btn-link btn-primary btn-icon btn-sm">
-    <clr-icon shape="cog"></clr-icon>
-    Primary
-</button>
-<button class="btn btn-link btn-success btn-icon btn-sm">
-    <clr-icon shape="check"></clr-icon>
-    Success
-</button>
-<button class="btn btn-link btn-warning btn-icon btn-sm">
-    <clr-icon shape="warning-standard"></clr-icon>
-    Warning
-</button>
-<button class="btn btn-link btn-danger btn-icon btn-sm">
-    <clr-icon shape="error-standard"></clr-icon>
-    Danger
-</button>
-<button class="btn btn-link btn-danger btn-icon btn-sm" disabled>
-    <clr-icon shape="home"></clr-icon>
-    Disabled
-</button>
-
-<h6>Text + icon (use only with arrows or angle)</h6>
-<button class="btn btn-link btn-primary btn-icon btn-sm">
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-link btn-primary btn-icon btn-sm" disabled>
-    Next
-    <clr-icon shape="arrow" dir="right"></clr-icon>
-</button>
-<button class="btn btn-link btn-primary btn-icon btn-sm">
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-<button class="btn btn-link btn-primary btn-icon btn-sm" disabled>
-    Next
-    <clr-icon shape="angle" dir="right"></clr-icon>
-</button>
-
-<h6>Icon only</h6>
-<button class="btn btn-link btn-primary btn-icon btn-sm">
-    <clr-icon shape="cog"></clr-icon>
-</button>
-<button class="btn btn-link btn-success btn-icon btn-sm">
-    <clr-icon shape="check"></clr-icon>
-</button>
-<button class="btn btn-link btn-warning btn-icon btn-sm">
-    <clr-icon shape="warning-standard"></clr-icon>
-</button>
-<button class="btn btn-link btn-danger btn-icon btn-sm">
-    <clr-icon shape="error-standard"></clr-icon>
-</button>
-<button class="btn btn-link btn-danger btn-icon btn-sm" disabled>
-    <clr-icon shape="home"></clr-icon>
-</button>
+<router-outlet></router-outlet>
