--- a/src/app/buttons/buttons.component.html
+++ b/src/app/buttons/buttons.component.html
@@ -2,24 +2,13 @@
 
 <ul class="nav" role="tablist">
     <li role="tab" class="nav-item">
-      <button class="btn btn-link nav-link active" aria-controls="panelDashboard" aria-selected="true" type="button">Dashboard</button>
+      <button class="btn btn-link nav-link" [routerLink]="'button'" routerLinkActive="active" type="button">Button</button>
     </li>
     <li role="tab" class="nav-item">
-      <button class="btn btn-link nav-link" aria-controls="panelManagement" aria-selected="false" type="button">Management</button>
+      <button class="btn btn-link nav-link" [routerLink]="'group'" routerLinkActive="active" type="button">Button Group</button>
     </li>
     <li role="tab" class="nav-item">
-      <button class="btn btn-link nav-link" aria-controls="panelCloud" aria-selected="false" type="button">Cloud</button>
+      <button class="btn btn-link nav-link" [routerLink]="'dropdown'" routerLinkActive="active" type="button">Dropdown</button>
     </li>
-    <div class="tabs-overflow open bottom-right">
-      <li class="nav-item">
-        <button class="btn btn-link nav-link dropdown-toggle">
-          <clr-icon shape="ellipsis-horizontal" class="is-info" title="More"></clr-icon>
-        </button>
-      </li>
-      <div class="dropdown-menu">
-        <button class="btn" role="tab" aria-controls="panelInfrastructure">Infrastructure</button>
-        <button class="btn" role="tab" aria-controls="panelSettings">Settings</button>
-      </div>
-    </div>
   </ul>
 <router-outlet></router-outlet>
